SF Primes/src/objects/Product_QC__c.object
<CustomObject>
    <description>Will replace &quot;Product&quot; on the opportunity page layout.  Work-around for need to display QC instead of list prices.</description>
    <fields>
        <fullName>Actual_QC__c</fullName>
        <label>Actual NewQ</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Website_Vendor__c</fullName>
        <inlineHelpText>Please select the current vendor used by the Dealer. If Other, please fill in manually.</inlineHelpText>
        <label>Current Website Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer E Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naked Lime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Product_QC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Vendor__c</fullName>
        <inlineHelpText>If Other is selected in the Current Website Vendor field please fill in this field.</inlineHelpText>
        <label>Other Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>If Product QC Level - Make is set to Other please fill in the Other field.</inlineHelpText>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_QC_Level_Make__c</fullName>
        <label>Product NewQ Level - Make</label>
        <picklist>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QC_Items__c.Name</field>
                <operation>notContain</operation>
                <value>DoNotUse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QC_Items__c</referenceTo>
        <relationshipName>Product_QC</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quota_Credit_Type_Text__c</fullName>
        <label>NewQ Type Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Credit_Type__c</fullName>
        <formula>Product__r.Quota_Credit_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Credit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_QC__c</fullName>
        <formula>Product__r.Suggested_QC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested QC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product NewQ</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product NewQ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CB_SLS_Other_Vendor_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)
)
&amp;&amp;
ISPICKVAL( Current_Website_Vendor__c , &quot;Other&quot;)
&amp;&amp;
ISBLANK( Other_Vendor__c )</errorConditionFormula>
        <errorDisplayField>Other_Vendor__c</errorDisplayField>
        <errorMessage>If &quot;Other&quot; is selected in the Current Website Vendor field then fill in what their current website vendor is.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_Product_Field_is_Website_Current</fullName>
        <active>true</active>
        <description>This Validation Rule makes the Current Website Vendor Field required if Product.Website is selected</description>
        <errorConditionFormula>(Product__r.Name = &apos;Website&apos;) &amp;&amp;
ISBLANK(TEXT(Current_Website_Vendor__c))</errorConditionFormula>
        <errorDisplayField>Current_Website_Vendor__c</errorDisplayField>
        <errorMessage>If Product is Website then fill in the Current Website Vendor field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_Sls_Product_QC_Level_Other</fullName>
        <active>true</active>
        <description>If Product QC Level - Make is set to Other please fill in the Other field.</description>
        <errorConditionFormula>ISPICKVAL(Product_QC_Level_Make__c, &apos;Other&apos;) &amp;&amp;
 Other__c = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Product_QC_Level_Make__c</errorDisplayField>
        <errorMessage>If Product QC Level - Make is set to Other please fill in the Other field.</errorMessage>
    </validationRules>
</CustomObject>